--- a/SOAPHelloWorld/nbproject/genfiles.properties
+++ b/SOAPHelloWorld/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=651128d4@1.41.2.1
 nbproject/build-impl.xml.data.CRC32=be5bee7f
 nbproject/build-impl.xml.script.CRC32=0cfa6a2c
 nbproject/build-impl.xml.stylesheet.CRC32=5459df51@1.41.2.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=95f56325
