--- a/GPS With Friends/build.xml
+++ b/GPS With Friends/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="GPSWithFriends" default="default" basedir=".">
-    <description>Builds, tests, and runs the project GPSWithFriends.</description>
+<project name="GPSwfriends" default="default" basedir=".">
+    <description>Builds, tests, and runs the project GPSwfriends.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
