--- a/GPS With Friends/nbproject/project.properties
+++ b/GPS With Friends/nbproject/project.properties
@@ -81,6 +81,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=GPSWithFriends.war
+war.name=GPSwfriends.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
